tests/build/widget/missing_semi.stderr
error: expected `;`
 --> $DIR/missing_semi.rs:9:9
  |
9 |         margin = 10
  |         ^^^^^^

warning: unused import: `cursor`
 --> $DIR/missing_semi.rs:5:31
  |
5 |     use zero_ui::properties::{cursor, margin};
  |                               ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
